Finish Categories Controller And Ajax In Index View

--- a/AutoPartsStore.Web/Areas/Admin/Views/Products/Index.cshtml
+++ b/AutoPartsStore.Web/Areas/Admin/Views/Products/Index.cshtml
@@ -31,7 +31,7 @@
 <div class="col">
     <div class="card shadow">
         <div class="card-header border-0">
-            <h3 class="mb-0">سفارشات</h3>
+            <h3 class="mb-0">محصولات</h3>
             <a href="/admin/products/create" class="btn btn-outline-primary mt-3 mr-2">افزودن محصول</a>
         </div>
         <div class="table-responsive">
