--- a/AutoPartsStore.Web/Areas/Admin/Views/UsersManager/Index.cshtml
+++ b/AutoPartsStore.Web/Areas/Admin/Views/UsersManager/Index.cshtml
@@ -54,7 +54,7 @@
                             <td scope="row">
                                 <div class="media align-items-center">
                                     <a href="#" class="avatar rounded-circle mr-3">
-                                        <img alt="Image placeholder" src="@(String.IsNullOrEmpty(item.Image) ? "/img/theme/team-1-800x800.jpg" : item.Image)">
+                                        <img alt="Image placeholder" src="@(String.IsNullOrEmpty(item.Image) ? "/img/theme/team-1-800x800.jpg" : "/img/"+item.Image)">
                                     </a>
                                     <div class="media-body">
                                         <span class="mb-0 text-sm">@item.UserName</span>
@@ -83,7 +83,7 @@
                             <td>
                                 <a class="mr-0 btn-sm btn btn-info" href="/admin/usersmanager/details/@item.Id">جزئیات</a>
                                 <a class="mr-0 btn-sm btn btn-primary" href="/admin/usersmanager/edit/@item.Id">ویرایش</a>
-                                <a class="mr-0 btn-sm btn btn-danger" href="#" onclick="showModal(@item.Id ,'@item.UserName')">حذف</a>
+                                <a class="mr-0 btn-sm btn btn-danger" href="#" onclick="showModal('@item.Id' ,'@item.UserName')">حذف</a>
                             </td>
                         </tr>
                     }
