Create Cart Page And Implement Basic Abilities

--- a/AutoPartsStore.Web/Views/Home/Index.cshtml
+++ b/AutoPartsStore.Web/Views/Home/Index.cshtml
@@ -95,12 +95,12 @@
             @foreach (var item in Model)
             {
                 <div class="col-md-4 product simpleCart_shelfItem text-center">
-                    <a href="single.html"><img src="/img/@item.Image" alt="" /></a>
+                    <a href="/products/details/@item.Id"><img src="/img/@item.Image" alt="" /></a>
                     <div class="mask">
-                        <a class="btn" href="single.html">جزئیات</a>
+                        <a class="btn" href="/products/details/@item.Id">جزئیات</a>
                     </div>
-                    <a class="product_name" href="single.html">@item.Title</a>
-                    <p><a class="item_add" href="#"><i></i> <span class="item_price">@item.Price.ToString("n0") ریال</span></a></p>
+                    <a class="product_name" href="/products/details/@item.Id">@item.Title</a>
+                    <p><a class="item_add" href="/card/add/@item.Id"><i></i> <span class="item_price">@item.Price.ToString("n0") ریال</span></a></p>
                 </div>
             }
             <div class="clearfix"></div>
