--- a/AutoPartsStore.Web/Views/Account/Login.cshtml
+++ b/AutoPartsStore.Web/Views/Account/Login.cshtml
@@ -12,7 +12,7 @@
                     <form method="post" asp-action="login" asp-controller="Account" class="box">
                         <input type="hidden" asp-for="ReturnUrl" />
                         <h1>ورود به سایت</h1>
-                        <p class="text-muted">در صورت نداشتن حساب , <a href="#">ثبت نام</a> کنید</p>
+                        <p class="text-muted">در صورت نداشتن حساب , <a href="/account/register">ثبت نام</a> کنید</p>
                         <div asp-validation-summary="All" class="text-danger mb-2 mt-2">
 
                         </div>
