--- a/AutoPartsStore.Web/wwwroot/scss/bootstrap/_variables.scss
+++ b/AutoPartsStore.Web/wwwroot/scss/bootstrap/_variables.scss
@@ -38,16 +38,16 @@ $grays: map-merge(
 );
 
 
-$blue:    #007bff !default;
-$indigo:  #6610f2 !default;
-$purple:  #6f42c1 !default;
-$pink:    #e83e8c !default;
-$red:     #dc3545 !default;
-$orange:  #fd7e14 !default;
-$yellow:  #ffc107 !default;
-$green:   #28a745 !default;
-$teal:    #20c997 !default;
-$cyan:    #17a2b8 !default;
+$blue: #5e72e4 !default;
+$indigo: #5603ad !default;
+$purple: #8965e0 !default;
+$pink: #f3a4b5 !default;
+$red: #f5365c !default;
+$orange: #fb6340 !default;
+$yellow: #ffd600 !default;
+$green: #2dce89 !default;
+$teal: #11cdef !default;
+$cyan: #2bffc6 !default;
 
 $colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
